# LightWeightGUI

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  plan.md  shell.html  test_sdl.cmake
docs/: application-architecture.md  claude_analysis.md  widget-architecture.md  widget-uml.md
src/: Application.cpp  Application.h  IGUIAttachment.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
src/ECS/: Engine.h  Registry.cpp  Registry.h
src/GUI/: ClippingStack.h  Delegate.h  GUIPrimitives.h  ILayout.h  IMeasurer.h  IRenderer.h  InputSystem.cpp  InputSystem.h  Layout.cpp  Layout.h  MainWindow.h  Panel.h  Property.h  Renderer.cpp  Renderer.h  Theme.cpp  Theme.h  Types.h  Utils.cpp  Utils.h  Widget.h
src/GUI/RHI/: Brush.h  DrawCommand.h  Geometry.h  Handles.h  ICanvas2D.h  IRenderDevice.h  ITextBackend.h  Paint.h
src/GUI/RHI/Raylib/: RaylibCanvas2D.cpp  RaylibCanvas2D.h  RaylibRenderDevice.cpp  RaylibRenderDevice.h  RaylibTextBackend.cpp  RaylibTextBackend.h
src/GUI/Widgets/: BaseButton.h  Label.h  LayoutPanel.h  MainWindow.h  OverlayRoot.h  Panel.h
